# kernel-utils

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/: dependabot.yml
.github/workflows/: build-test.yml
source/man/man1/: Makefile.am  kern-bld.sh.1.man.in  kern-bld.sh.1.txt
source/progs/bash/: Makefile.am  kern-bld.sh.in
src/bash-comp/: Makefile.am  Makemodule.am  kern-bld.sh.in
src/man/1/: Makefile.am  kern-bld.1.man.in  kern-bld.sh.1.man.in
src/prg/bash/: Makefile.am  kern-bld.sh.in
